--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
-    "@babel/register": "7.0.0",
     "@babel/parser": "^7.7.4",
+    "@babel/register": "7.0.0",
     "@vue/cli-plugin-babel": "3.5.3",
     "@vue/cli-plugin-eslint": "^3.9.1",
     "@vue/cli-plugin-unit-jest": "3.5.3",
@@ -90,18 +90,16 @@
     "http-proxy-middleware": "^0.19.1",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
-    "node-sass": "^4.9.0",
     "plop": "2.3.0",
     "runjs": "^4.3.2",
+    "sass": "^1.26.10",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "babel-plugin-dynamic-import-node": "2.3.0"
+    "vue-template-compiler": "2.6.10"
   },
   "engines": {
     "node": ">=8.9",
