--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "0.4.0",
-    "axios": "0.18.1",
+    "axios": "^0.21.1",
     "clipboard": "2.0.4",
     "codemirror": "^5.49.2",
     "connect": "3.6.6",
@@ -62,6 +62,7 @@
     "vue-echarts": "^5.0.0-beta.0",
     "vue-highlightjs": "^1.3.3",
     "vue-image-crop-upload": "^2.5.0",
+    "vue-json-editor": "^1.4.3",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
