--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "vue-json-editor": "^1.4.3",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
+    "vue-uuid": "^2.0.2",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
     "wangeditor": "^3.1.1",
